--- a/src/style/Homepage.css
+++ b/src/style/Homepage.css
@@ -7,7 +7,6 @@
   background-image: url('../images/hompage.png');
   background-size: cover;
   background-position: center;
-  
 }
 
 .logo {
@@ -26,13 +25,13 @@
 .button {
   font-size: 2.7rem;
   font-weight: 380;
-  background: linear-gradient(to right, hsl(176,73%,68%), hsl(336,82%,76%));
+  background: linear-gradient(to right, hsl(176, 73%, 68%), hsl(336, 82%, 76%));
   color: black;
   width: 290px;
   border-radius: 30px;
   border: 3px solid black;
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out; 
+  transition: background-color 0.3s ease-in-out;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -44,8 +43,7 @@
   width: 586px;
 }
 
-
-.TAULOGO{
+.TAULOGO {
   margin-top: 30px;
   width: 100px;
 }
@@ -65,6 +63,7 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
 .thesis {
   margin: 0 2px;
   padding: 3px 4px;
@@ -73,4 +72,29 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+ 
+
+/* Mobile Styles */
+@media screen and (max-width: 767px) {
+  .Mindspace {
+    width: 100%;
+    max-width: 400px; /* Limit the width to 400px for smaller screens */
+  }
+
+  .button {
+    width: 100%; /* Make the button occupy the full width on mobile */
+  }
+
+  .language-options {
+    margin-top: 10px;
+    flex-wrap: wrap;
+  }
+
+  .language-option,
+  .thesis {
+    font-size: 1rem; /* Adjust the font size for smaller screens */
+    margin: 2px;
+    padding: 2px 4px;
+  }
 }
