--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,74 @@
   .App {
-  text-align: center;
+    text-align: center;
 
-  position: relative;
-  min-height: 100vh;
-}
+    position: relative;
+    min-height: 100vh;
+  }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
   }
-}
 
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+    }
   }
-  to {
-    transform: rotate(360deg);
+
+
+  .App-link {
+    color: #61dafb;
   }
-}
 
-.logo {
-  display: flex;
-  align-items: center;
-  max-width: 200px; /* Set a max-width to limit the logo size */
-}
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
 
-.logo img {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-}
+    to {
+      transform: rotate(360deg);
+    }
+  }
 
-.logo h1 {
-  font-size: 18px; /* Reduce the font size */
-  font-weight: bold;
-  margin: 0;
-}
+  .logo {
+    display: flex;
+    align-items: center;
+    max-width: 200px;
+    /* Set a max-width to limit the logo size */
+  }
 
-.Mindfulness{
-  background-image: url();
-}
+  .logo img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+
+  .logo h1 {
+    font-size: 18px;
+    /* Reduce the font size */
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .Mindfulness {
+    background-image: url();
+  }
 
 
 
 
-.footer {
-  
-  position: fixed;
-  bottom: -12px;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  border-top: 1px solid lightgray;
-  padding: 10px;
-}
+  .footer {
+    position: fixed;
+    bottom: -12px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid lightgray;
+    padding: 5px;
 
+    .footer-txt {
+      font-size: medium;
+      
+    }
+  }
