--- a/src/style/AppHeader.css
+++ b/src/style/AppHeader.css
@@ -14,7 +14,7 @@
 
 .Logo-footer {
   width: 60px;
-  height: 60px; 
+  height: 60px;
   margin-right: 10px;
 }
 
@@ -30,6 +30,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
 }
 
 .Mindspace-footer {
@@ -39,7 +40,7 @@
   margin-right: 0.625rem;
 }
 
-.componentText{
+.componentText {
   margin-right: 48px;
   font-size: 39px;
   font-weight: 500;
