--- a/src/style/Thesis.css
+++ b/src/style/Thesis.css
@@ -18,9 +18,12 @@ justify-content: space-around;
 }
 
 
-.thesis{
+/* .thesis{
     background-image: url('https://res.cloudinary.com/de3pvycqi/image/upload/v1690199208/mind-space/thesis/EBook_01_small_1_apxeg5.jpg');
     min-height: 88vh;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: bottom center;
 }
+ */
+
