--- a/src/style/ThesisContent.css
+++ b/src/style/ThesisContent.css
@@ -12,11 +12,11 @@
   }
   
   p {
-    margin: 4px;
+    margin: 0.5em;
     font-size: 1em;
   }
   
-  h5 {
+  h4 {
     margin: 8px;
   }
   
@@ -47,3 +47,8 @@
     cursor: not-allowed;
   }
   
+
+
+  .custom-link {
+    text-decoration: none;
+}
