--- a/src/style/ThesisContent.css
+++ b/src/style/ThesisContent.css
@@ -14,10 +14,13 @@
   p {
     margin: 0.5em;
     font-size: 1em;
+    color: #000;
   }
   
   h4 {
     margin: 8px;
+    color: #000;
+
   }
   
   /* Styling for navigation buttons */
