--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,8 @@
     text-align: center;
     border-top: 1px solid lightgray;
     padding: 5px;
+    background-color: azure;
+
 
     .footer-txt {
       font-size: medium;
