--- a/src/style/ThesisContent.css
+++ b/src/style/ThesisContent.css
@@ -1,57 +1,64 @@
 /* ThesisContent.css */
 
 .table-of-contents {
-    display: flex;
-    justify-content: space-evenly;
-  }
-  
-  .thesis-content {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-  }
-  
-  p {
-    margin: 0.5em;
-    font-size: 1em;
-    color: #000;
-  }
-  
-  h4 {
-    margin: 8px;
-    color: #000;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+}
 
-  }
-  
-  /* Styling for navigation buttons */
-  .navigation-buttons {
-    display: flex;
-    /* justify-content: center; */
-    justify-content: space-between;
-    margin: 20px;
-    position: sticky;
-    top: 90%;
-  }
-  
-  .navigation-buttons button {
-    padding: 8px 16px;
-    margin: 0 4px;
-    font-size: 1em;
-    cursor: pointer;
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #000;
-    border-radius: 4px;
+.thesis-content {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  }
-  
-  .navigation-buttons button:disabled {
-    background-color: #d3d3d3;
-    cursor: not-allowed;
-  }
-  
+p {
+  margin: 0.5em;
+  font-size: 1em;
+  color: #000;
+
+}
+
+h4 {
+  margin: 8px;
+  color: #000;
+
+}
+
+/* Styling for navigation buttons */
+.navigation-buttons {
+  display: flex;
+  /* justify-content: center; */
+  justify-content: space-between;
+  margin: 20px;
+  position: sticky;
+  top: 90%;
+}
+
+.navigation-buttons button {
+  padding: 8px 16px;
+  margin: 0 4px;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 4px;
+
+}
+
+.navigation-buttons button:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
+}
 
 
-  .custom-link {
-    text-decoration: none;
+
+.custom-link {
+  text-decoration: none;
+
+  :hover {
+    background-color: lightgrey;
+  }
 }
