--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@
     width: 100%;
     text-align: center;
     border-top: 1px solid lightgray;
-    padding: 5px;
+    padding: 1em;
     background-color: azure;
 
 
