--- a/src/style/ThesisContent.css
+++ b/src/style/ThesisContent.css
@@ -14,29 +14,27 @@
 }
 
 p {
-  margin: 0.5em;
+  margin: 0.1em;
   font-size: 1em;
   color: #000;
 
 }
 
 h4 {
-  margin: 8px;
+  margin: 0.1em;
   color: #000;
 
 }
-
 /* Styling for navigation buttons */
 .navigation-buttons {
   display: flex;
-  /* justify-content: center; */
   justify-content: space-between;
   margin: 20px;
   position: sticky;
-  top: 90%;
+  top: 88%;
 }
 
-.navigation-buttons button {
+.navigation-buttons a {
   padding: 8px 16px;
   margin: 0 4px;
   font-size: 1em;
@@ -45,12 +43,19 @@ h4 {
   color: #000;
   border: 1px solid #000;
   border-radius: 4px;
-
+  text-decoration: none; /* Remove underline from links */
+  display: inline-block; /* Ensures the links behave like inline-block elements */
+  transition: background-color 0.3s, color 0.3s; /* Add smooth transition effect */
 }
 
-.navigation-buttons button:disabled {
+.navigation-buttons a:hover {
+  background-color: #f0f0f0; /* Change background color on hover */
+}
+
+.navigation-buttons a:disabled {
   background-color: #d3d3d3;
   cursor: not-allowed;
+  color: #a0a0a0; /* Change text color when disabled */
 }
 
 
