--- a/src/style/AppHeader.css
+++ b/src/style/AppHeader.css
@@ -41,8 +41,8 @@
 }
 
 .componentText {
-  margin-right: 48px;
-  font-size: 1em;
+  margin-right: 3rem;
+  font-size: 1.5em;
   font-weight: 500;
 }
 
