--- a/src/style/ThesisPage.css
+++ b/src/style/ThesisPage.css
@@ -1,5 +1,5 @@
 .thesis-nav{
-    /* min-height: 71vh; */
+    min-height: 0vh;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -18,6 +18,6 @@
 }
 
 .thesis-img{
-    width: 90%;
-    max-height: 81vh;
+    width: 87%;
+    max-height: 79vh;
 }
