--- a/src/style/AppHeader.css
+++ b/src/style/AppHeader.css
@@ -13,8 +13,8 @@
 }
 
 .Logo-footer {
-  width: 11%;
-  height: 7.5vh;
+  width: 60px;
+  height: 60px;
   margin-right: 10px;
 }
 
@@ -35,8 +35,8 @@
 
 .Mindspace-footer {
 
-  width: 81%;
-  height: 5.1vh;
+  width: 29.625rem;
+  height: 2.563rem;
   margin-right: 0.625rem;
 }
 
