--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
   .App {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
 
     position: relative;
